# kaipanla

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.example.toml  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
docs/: TASK1_SETUP.md  development.md  phase2-summary.md  phase3-deepen-summary.md  phase3-summary.md  test-guide.md  test-report.md
docs/plans/: 2025-12-24-kaipanla-design.md  2025-12-24-phase1-infrastructure.md  2025-12-25-phase2-core-features.md  2025-12-25-phase3-data-integration-design.md  2025-12-25-phase3-data-integration.md
migrations/: 001_init_tables.sql  002_add_collection_tables.sql  003_add_import_tables.sql  004_optimize_storage.sql
scripts/: install-deps.sh
src/: main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: cmd.rs  config.rs  error.rs  lib.rs  main.rs
src-tauri/src/api/: collection.rs  routes.rs  server.rs
src-tauri/src/cmd/: auction.rs  collection.rs  dragon_tiger.rs  money_flow.rs  monitor.rs  quote.rs
src-tauri/src/collector/: buffer.rs  importer.rs  mod.rs  parser.rs  scheduler.rs  tdx.rs  validator.rs  writer.rs
src-tauri/src/db/: clickhouse.rs  migrations.rs  mod.rs  optimizer.rs
src-tauri/src/models/: auction.rs  dragon_tiger.rs  mod.rs  money_flow.rs  quote.rs  stock.rs
src-tauri/src/monitor/: metrics.rs  mod.rs
src-tauri/src/service/: auction_service.rs  dragon_tiger_service.rs  mod.rs  money_flow_service.rs  quote_service.rs
src-tauri/src/websocket/: message.rs  mod.rs  server.rs
src-tauri/tests/: integration_test.rs
